src/styles/components/features/about/index.css
@layer components {
  .about-header {
    @apply relative z-0 pt-20;
    @apply transition-colors duration-300 ease-in-out;
    background-color: var(--primaryBg);
    pointer-events: none;
    overflow: hidden;
    min-height: calc(100vh + var(--triangleHeight));
  }

  .about-header h1 {
    @apply text-center pt-16;
  }

  .couch-wrapper {
    @apply absolute bottom-0 w-full;
  }

  .spinning-text {
    @apply absolute left-1/2 transform -translate-x-1/2;
    max-width: 1250px;
    width: 100%;
  }

  .spinning-text svg text {
    fill: var(--primary-400);
    font-size: 10.55px;
    font-weight: bold;
  }

  .spinning-text svg text {
    fill: var(--primary-300);
  }

  .spinning-text svg {
    @apply absolute left-0;
    width: 100%;
    display: inline-block;
    transform-origin: center center;
    animation-name: rotate-circle;
    animation-duration: 120s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
  }

  @keyframes rotate-circle {
    from {
      transform: rotate(360deg);
    }
    to {
      transform: rotate(0deg);
    }
  }

  .couch-svg {
    @apply mx-auto px-12 md:px-20;
    padding-top: 12vw;
    padding-bottom: 20px;
    position: relative;
  }

  .couch-svg svg {
    @apply mx-auto;
    padding-bottom: calc(var(--triangleHeight));
    width: 640px;
    max-width: 100%;
    display: block;
  }

  .about-header-wrapper {
    @apply mx-auto text-left lg:text-left sm:max-w-screen-sm md:w-1/2 md:pl-4;
  }

  .about-header h1 {
    @apply font-bold text-2xl capitalize text-white leading-snug md:text-5xl lg:text-8xl;
  }

  .about-header p {
    @apply text-sm md:text-xl text-left max-w-[500px];
  }

  .about-content .about-intro > p {
    @apply w-full px-16 mx-auto md:max-w-screen-sm md:px-10 lg:max-w-screen-md;
    @apply mb-6 md:mb-10;
    font-family: var(--font-serif);
    color: var(--textBody);
  }

  .about-content h1,
  .about-content h2,
  .about-content h3,
  .about-content h4,
  .about-content h5,
  .about-content h6 {
    @apply font-serif font-normal leading-snug content-block;
    @apply text-primary-600 dark:text-primary-400;
  }

  .about-content ul {
    @apply content-block;
    @apply text-body;
  }

  .about-content h1,
  .about-content h2,
  .about-content h3 {
    @apply mb-6 md:mb-8;
  }

  .about-content h2 {
    @apply text-2xl md:text-6xl;
  }

  .about-content p a {
    @apply relative overflow-hidden no-underline;
    color: var(--primary-600);
  }

  .dark .about-content p a {
    color: var(--primary-400);
  }

  .about-content p a {
    @apply font-extrabold;
  }

  .about-content p a::after {
    @apply absolute w-full left-0 pointer-events-none;
    @apply opacity-30 bg-current;
    content: '';
    height: 2px;
    top: calc(100% + 1px);
  }

  .about-content p a:hover {
    color: var(--accent-600);
  }

  .dark .about-content p a:hover {
    color: var(--accent-400);
  }

  .about-content p a:hover::after {
    @apply bg-transparent;
    @apply zigzag-base;
    top: calc(100% - 1px);
    background-image: var(--zigzag-accent-light);
  }
}

